--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
     <nav>
       {% if page.nav != 'home' %}
         <a href=" /">Home</a>
-        <a href=" /blog ">Blog</a>
+        <a href=" /blog ">教程</a>
         <a href=" /feed.xml "><i class="fa fa-rss" aria-hidden="true"></i></a>
       {% else %}
         <a href=" # ">Home</a>
         <a href=" #about ">About</a>
-        <a href=" #blog ">Blog</a>
-        <a href=" #projects">Projects</a>
+        <a href=" #blog ">教程</a>
+        <a href=" #projects">近期回归日程</a>
       {% endif %}
     </nav>
   </div>
