--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -5,11 +5,11 @@ layout: default
 	<section id="posts" style="padding-bottom: 0">
 		<div class="wrapper">
 			<div class="text-center">
-				<h1 class="blue-title">Posts</h1>
+				<h1 class="blue-title">各类打投教程汇总</h1>
 			</div>
 			<div class="posts-tabs">
-				<span class="posts-tab-item btn-left tab-one active">Tech</span>
-				<span class="posts-tab-item btn-right tab-two">Life</span>
+				<span class="posts-tab-item btn-left tab-one active">教程</span>
+				<span class="posts-tab-item btn-right tab-two">其他</span>
 				{% for i in (1..10) %}
 					<i class="fa fa-paw" aria-hidden="true"></i>
 				{% endfor %}
