--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
                     <i class="fa fa-paw" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>Super Junior-D&E 四辑 2020年9月回归，具体日期未定</a></h4>
+                    <h4><a>Super Junior-D&E 四辑 2020年9月回归</a></h4>
                     <p>
                         <span>目前专辑预售工作已开启，可移步各大站子自行选择裸专/特典专/不运回。</span>
                         
@@ -25,7 +25,7 @@
                     <i class="fa fa-paw" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>Super Junior 十五周年纪念专辑 2020年11月6日回归</a></h4>
+                    <h4><a>Super Junior 15周年纪念专辑 2020年11月6日回归</a></h4>
                     <p>
 						<span>敬请期待。</span>
                     
@@ -41,7 +41,7 @@
                     <i class="fa fa-paw" aria-hidden="true"></i>
                 </div>
                 <div class="vertical-timeline-content">
-                    <h4><a>第一次赶上回归期应该做什么？</a></h4>
+                    <h4><a>必看：回归应该做什么？</a></h4>
                     <p>
                         <a class="btn-primary btn-blue" href="https://baidu.com" target="_blank">点我</a>
                     </p>
